--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -11,6 +11,11 @@
   "xdark"
 ] %}
 
+{% set vspacingOptions = [
+  "xsmall",
+  "small"
+] %}
+
 {% set Attributes = create_attribute(attributes|default({})) %}
 
 
@@ -18,8 +23,9 @@
 {% set baseClass = prefix ~ componentName %}
 
 
-{% set theme = theme == false and theme is null ? "dark" : theme | default("dark") %}
+{% set theme = theme == false and theme is not null ? "false" : theme | default("dark") %}
 {% set gradient = gradient == false and gradient is not null ? "false" : "true" | default("true") %}
+{% set vspacing = vspacing == false and vspacing is not null ? "false" : vspacing | default("xsmall") %}
 
 
 {% set Classes = [
@@ -29,7 +35,7 @@
 <bolt-{{ componentName }} bolt-component>
 
   {% embed "@bolt/band.twig" with {
-    size: "xsmall",
+    size: vspacing,
     theme: theme,
     fullBleed: true
   } %}
@@ -67,7 +73,7 @@
           </div>
         </div>
         <div class="c-bolt-navbar__nav">
-          <ul class="c-bolt-nav-list">
+          <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}">
             {% for item in links %}
               <li class="c-bolt-nav-list__item">
                 <a class="c-bolt-nav-list__item-link" href="#{{ item.url }}" name="{{ item.url }}">
