WIP: removing target styles

--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -121,7 +121,7 @@ $bolt-navbar-link-bg-animation-timing: $bolt-transition-timing*4;
   opacity: 0.8;
   transition: opacity $bolt-transition;
 
-  &:hover, &:active, &:target,
+  &:hover, &:active,
   &.is-hover, &.is-active {
     opacity: 1;
   }
@@ -159,7 +159,7 @@ $bolt-navbar-link-bg-animation-timing: $bolt-transition-timing*4;
     }
   }
 
-  &:active, &:target,
+  &:active,
   &.is-active {
     &:before {
       animation: none;
