--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -76,7 +76,7 @@
           <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}">
             {% for item in links %}
               <li class="c-bolt-nav-list__item">
-                <a class="c-bolt-nav-list__item-link" href="#{{ item.url }}" name="{{ item.url }}">
+                <a class="c-bolt-nav-list__item-link" href="#{{ item.url }}">
                   {{ item.text }}
                 </a>
               </li>
