--- a/src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
+++ b/src/_patterns/04-pages/d8-product-landing/d8-product-t2.twig
@@ -222,8 +222,6 @@
         } only %}
       {% endcell %}
 
-
-
       {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
         {% include "@bolt/device-viewer.twig" with {
           device: "ipad",
@@ -233,58 +231,173 @@
             src: "/images/sample/product-device-screenshot--tablet.jpg"
           }
         } only %}
-        {# <link rel="stylesheet" href="devices.min.css" type="text/css">
-        <div class="marvel-device macbook">
-            <div class="top-bar"></div>
-            <div class="camera"></div>
-            <div class="screen">
-              {% include "@bolt/image.twig" with {
-                src: "/images/sample/product-device-screenshot--desktop.jpg"
-              } %}
-                <!-- Content goes here -->
-            </div>
-            <div class="bottom-bar"></div>
-        </div>
-
-
-        <div class="marvel-device ipad black landscape">
-            <div class="camera"></div>
-            <div class="screen">
-              {% include "@bolt/image.twig" with {
-                src: "/images/sample/product-device-screenshot--tablet.jpg"
-              } %}
-                <!-- Content goes here -->
-            </div>
-            <div class="home"></div>
-        </div>
-
-
-        <div class="marvel-device iphone8 black">
-            <div class="top-bar"></div>
-            <div class="sleep"></div>
-            <div class="volume"></div>
-            <div class="camera"></div>
-            <div class="sensor"></div>
-            <div class="speaker"></div>
-            <div class="screen">
-              {% include "@bolt/image.twig" with {
-                src: "/images/sample/product-device-screenshot--phone.jpg"
-              } %}
-                <!-- Content goes here -->
-            </div>
-            <div class="home"></div>
-            <div class="bottom-bar"></div>
-        </div> #}
-
-
-        {# include "@bolt/image.twig" with {
-          src: "/images/sample/decision-hub-chart.png"
-        } only #}
       {% endcell %}
 
     {% endgrid %}
 
 
+  {% endblock %}
+{% endembed %}
+
+
+
+
+{% embed "@bolt/band.twig" with {
+  size: "medium",
+  theme: "xlight",
+  fullBleed: true
+} only %}
+  {% block band_content %}
+
+    {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
+        {% include "@bolt/device-viewer.twig" with {
+          device: "ipad",
+          orientation: "portrait",
+          color: "black",
+          image: {
+            src: "/images/sample/product-device-screenshot--tablet-portrait.png"
+          }
+        } only %}
+      {% endcell %}
+
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-5/12@small" %}
+        {% include "@bolt/subheadline.twig" with {
+          text: "Maximize Value with <strong>Next&nbsp;Best Action Intelligence</strong>",
+          size: "xxlarge",
+          tag: "span"
+        } only %}
+       
+        {% include "@bolt/text.twig" with {
+          text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
+          size: "medium"
+        } only %}
+
+        {% include "@bolt/button-group.twig" with {
+          "buttons": [
+            {
+              "text": "Call to action",
+              "style": "primary"
+            },
+            {
+              "text": "Call to action",
+              "style": "secondary"
+            }
+          ]
+        } only %}
+      {% endcell %}
+
+    {% endgrid %}
+
+
+  {% endblock %}
+{% endembed %}
+
+
+
+{% embed "@bolt/band.twig" with {
+  size: "medium",
+  theme: "xlight",
+  fullBleed: true
+} only %}
+  {% block band_content %}
+
+    {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-5/12@small" %}
+        {% include "@bolt/subheadline.twig" with {
+          text: "Maximize Value with <strong>Next&nbsp;Best Action Intelligence</strong>",
+          size: "xxlarge",
+          tag: "span"
+        } only %}
+       
+        {% include "@bolt/text.twig" with {
+          text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
+          size: "medium"
+        } only %}
+
+        {% include "@bolt/button-group.twig" with {
+          "buttons": [
+            {
+              "text": "Call to action",
+              "style": "primary"
+            },
+            {
+              "text": "Call to action",
+              "style": "secondary"
+            }
+          ]
+        } only %}
+      {% endcell %}
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
+        {% include "@bolt/device-viewer.twig" with {
+          device: "iphone8",
+          orientation: "portrait",
+          color: "black",
+          image: {
+            src: "/images/sample/product-device-screenshot--phone.jpg"
+          }
+        } only %}
+      {% endcell %}
+
+    {% endgrid %}
+
+
+  {% endblock %}
+{% endembed %}
+
+
+
+
+{% embed "@bolt/band.twig" with {
+  size: "medium",
+  theme: "xlight",
+  fullBleed: true
+} only %}
+  {% block band_content %}
+
+    {% grid "o-bolt-grid--flex o-bolt-grid--large o-bolt-grid--middle o-bolt-grid--matrix" %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-7/12@small" %}
+        {% include "@bolt/device-viewer.twig" with {
+          device: "macbook",
+          orientation: "landscape",
+          color: "black",
+          image: {
+            src: "/images/sample/product-device-screenshot--desktop.jpg"
+          }
+        } only %}
+      {% endcell %}
+
+
+      {% cell "u-bolt-width-1/1 u-bolt-width-5/12@small" %}
+        {% include "@bolt/subheadline.twig" with {
+          text: "Maximize Value with <strong>Next&nbsp;Best Action Intelligence</strong>",
+          size: "xxlarge",
+          tag: "span"
+        } only %}
+       
+        {% include "@bolt/text.twig" with {
+          text: "Blow away your customer’s expectations - engage each individual one-to-one, letting the AI constantly adapt to their needs.",
+          size: "medium"
+        } only %}
+
+        {% include "@bolt/button-group.twig" with {
+          "buttons": [
+            {
+              "text": "Call to action",
+              "style": "primary"
+            },
+            {
+              "text": "Call to action",
+              "style": "secondary"
+            }
+          ]
+        } only %}
+      {% endcell %}
+    {% endgrid %}
   {% endblock %}
 {% endembed %}
 
