WIP: product page navbar demo

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
@@ -1,5 +1,5 @@
 {# Sample Usage
-  {% include "@bolt/twig" with {
+  {% include "@bolt/blockquote.twig" with {
     // Default is large. [large, xlarge, xxlarge]
     "size": "large",
 
