--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -1,4 +1,32 @@
 {# Sample Usage
+  {% include "@bolt/navbar.twig" with {
+    "theme": "dark",
+    "gradient": true,
+    "vspacing": "xsmall",
+    "title":
+    {
+      "tag": "h2",
+      "text": "Title Text",
+      "icon": {
+        "name": "icon-name"
+      }
+    },
+    "links":
+    [
+      {
+        "text": "Link 1 Text",
+        "url": "link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "link-3-url"
+      }
+    ]
+  } only %}
 #}
 
 
@@ -56,27 +84,29 @@
 
     {% block band_content %}
       <nav class="c-bolt-navbar">
-        <div class="c-bolt-navbar__title">
-          <div class="c-bolt-navbar__title-item">
-            {% include "@bolt/icon.twig" with {
-              "name": title.icon.name,
-              "size": "large"
-            } only %}
+        {% if title %}
+          <div class="c-bolt-navbar__title">
+            <div class="c-bolt-navbar__title-item">
+              {% include "@bolt/icon.twig" with {
+                "name": title.icon.name,
+                "size": "large"
+              } only %}
+            </div>
+            <div class="c-bolt-navbar__title-item">
+              {% include "@bolt/text.twig" with {
+                "size": "large",
+                "weight": "semibold",
+                "tag": title.tag,
+                "text": title.text
+              } only %}
+            </div>
           </div>
-          <div class="c-bolt-navbar__title-item">
-            {% include "@bolt/text.twig" with {
-              "size": "large",
-              "weight": "semibold",
-              "tag": "h1",
-              "text": title.text
-            } only %}
-          </div>
-        </div>
+        {% endif %}
         <div class="c-bolt-navbar__nav">
           <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }}">
             {% for item in links %}
               <li class="c-bolt-nav-list__item">
-                <a class="c-bolt-nav-list__item-link" href="#{{ item.url }}">
+                <a class="c-bolt-nav-list__item-link" href="{{ item.url }}">
                   {{ item.text }}
                 </a>
               </li>
