--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -91,10 +91,11 @@ $bolt-nav-list-link-bg-animation-timing: $bolt-transition-timing*4;
 .c-bolt-nav-list__indicator {
   position: absolute;
   left: 0;
+  width: 0;
   height: $bolt-nav-list-link-border-size;
   background-color: currentColor;
   background-color: var(--bolt-theme-heading, currentColor);
-  transition: all $bolt-transition;
+  transition: all 200ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
   will-change: width, transform;
 
   .c-bolt-nav-list--xsmall & {
