chore: data update

--- a/src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo.twig
+++ b/src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo.twig
@@ -5,8 +5,10 @@
     "gradient": false,
     "title":
     {
+      "tag": "h2",
       "text": "Product",
-      "icon": {
+      "icon":
+      {
         "name": "marketing-gray"
       }
     },
@@ -14,19 +16,19 @@
     [
       {
         "text": "Features",
-        "url": "features"
+        "url": "#features"
       },
       {
         "text": "Customer Success",
-        "url": "customer-success"
+        "url": "#customer-success"
       },
       {
         "text": "Go Further",
-        "url": "go-further"
+        "url": "#go-further"
       },
       {
         "text": "Industry Apps",
-        "url": "industry-apps"
+        "url": "#industry-apps"
       }
     ]
   } %}
