--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -14,7 +14,8 @@
     {
       "tag": "h2",
       "text": "Title Text",
-      "icon": {
+      "icon":
+      {
         "name": "icon-name"
       }
     },
