--- a/src/_patterns/04-pages/d8-product/d8-product.twig
+++ b/src/_patterns/04-pages/d8-product/d8-product.twig
@@ -14,7 +14,8 @@
     {
       "tag": "h2",
       "text": "Product",
-      "icon": {
+      "icon":
+      {
         "name": "marketing-gray"
       }
     },
