--- a/src/_patterns/02-components/bolt-navbar/src/navbar.twig
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.twig
@@ -54,8 +54,6 @@
   "small"
 ] %}
 
-{% set Attributes = create_attribute(attributes|default({})) %}
-
 
 {% set componentName = "navbar" %}
 {% set baseClass = prefix ~ componentName %}
@@ -113,10 +111,12 @@
           </div>
         {% endif %}
         <div class="c-bolt-navbar__nav">
-          <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing} js-bolt-nav-list" }}">
+          <ul class="c-bolt-nav-list {{ "c-bolt-nav-list--#{vspacing}" }} js-bolt-nav-list">
             {% for item in links %}
               <li class="c-bolt-nav-list__item">
-                <a class="c-bolt-nav-list__item-link js-bolt-nav-list-link" href="{{ item.url }}">
+                {% set itemAttributes = create_attribute(item.attributes | default({})) %}
+                {% set itemAttributes = itemAttributes.addClass("c-bolt-nav-list__item-link js-bolt-nav-list-link").setAttribute("href", item.url) %}
+                <a {{ itemAttributes }}>
                   {{ item.text }}
                 </a>
               </li>
