BK-66: Use CSS selector for scroll header offset

--- a/src/_patterns/02-components/bolt-page-header/src/page-header.twig
+++ b/src/_patterns/02-components/bolt-page-header/src/page-header.twig
@@ -1,4 +1,4 @@
-<header class="c-page-header qa-page-header js-global-header cd-main-header is-fixed headroom is-top is-not-bottom">
+<header class="c-page-header qa-page-header js-global-header js-bolt-smooth-scroll-offset cd-main-header is-fixed headroom is-top is-not-bottom">
   <div class="c-page-header__wrapper">
     <div class="c-page-header__background"></div>
     <div class="c-page-header__content"> <span id="!"></span>
