--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -87,21 +87,21 @@ bolt-navbar {
 
 
 /* ------------------------------------ *\
-   Nav List
+   Navlist
 \* ------------------------------------ */
 
-$bolt-nav-list-link-border-size: 2px;
-$bolt-nav-list-link-border-transition-ease: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-$bolt-nav-list-link-border-transition-timing: $bolt-transition-timing*2;
+$bolt-navlist-link-border-size: 2px;
+$bolt-navlist-link-border-transition-ease: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+$bolt-navlist-link-border-transition-timing: $bolt-transition-timing*2;
 
-$bolt-nav-list-link-bg-color: rgba(bolt-color(gray), 0.2);
-$bolt-nav-list-link-bg-border-radius: $bolt-border-radius;
-$bolt-nav-list-link-bg-transition-timing: $bolt-transition-timing*4;
-$bolt-nav-list-link-bg-transition: $bolt-transition;
+$bolt-navlist-link-bg-color: rgba(bolt-color(gray), 0.2);
+$bolt-navlist-link-bg-border-radius: $bolt-border-radius;
+$bolt-navlist-link-bg-transition-timing: $bolt-transition-timing*4;
+$bolt-navlist-link-bg-transition: $bolt-transition;
 
 
-// Nav List Component
-.c-bolt-nav-list {
+// Navlist Component
+.c-bolt-navlist {
   @include bolt-margin(0);
   @include bolt-padding(0);
 
@@ -110,42 +110,42 @@ $bolt-nav-list-link-bg-transition: $bolt-transition;
   list-style: none;
 }
 
-.c-bolt-nav-list__indicator {
+.c-bolt-navlist__indicator {
   position: absolute;
   left: 0;
   width: 0;
-  height: $bolt-nav-list-link-border-size;
+  height: $bolt-navlist-link-border-size;
   background-color: currentColor;
   background-color: var(--bolt-theme-heading, currentColor);
   transition:
     all
-    $bolt-nav-list-link-border-transition-timing
-    $bolt-nav-list-link-border-transition-ease;
+    $bolt-navlist-link-border-transition-timing
+    $bolt-navlist-link-border-transition-ease;
   will-change: width, transform;
 
-  .c-bolt-nav-list--xsmall & {
+  .c-bolt-navlist--xsmall & {
     bottom: (bolt-v-spacing(xsmall) * -1);
   }
 
-  .c-bolt-nav-list--small & {
+  .c-bolt-navlist--small & {
     bottom: (bolt-v-spacing(medium) * -1); // TODO: [Mai] When the band spacing options are fixed, small should map to small, not medium here.
   }
 
   // Vertical spacing options for future use.
-  // .c-bolt-nav-list--medium &
+  // .c-bolt-navlist--medium &
   //   bottom: (bolt-v-spacing(medium) * -1);
   // }
   //
-  // .c-bolt-nav-list--large &
+  // .c-bolt-navlist--large &
   //   bottom: (bolt-v-spacing(large) * -1);
   // }
   //
-  // .c-bolt-nav-list--xlarge &
+  // .c-bolt-navlist--xlarge &
   //   bottom: (bolt-v-spacing(xlarge) * -1);
   // }
 }
 
-.c-bolt-nav-list__item-link {
+.c-bolt-navlist__item-link {
   @include bolt-padding(small, squished);
   @include bolt-font-size(small);
   @include bolt-font-weight(semibold);
@@ -169,8 +169,8 @@ $bolt-nav-list-link-bg-transition: $bolt-transition;
     width: 100%;
     height: 100%;
     content: '';
-    border-radius: $bolt-nav-list-link-bg-border-radius;
-    background-color: $bolt-nav-list-link-bg-color;
+    border-radius: $bolt-navlist-link-bg-border-radius;
+    background-color: $bolt-navlist-link-bg-color;
     transform: scale3d(0, 0, 0);
   }
 
@@ -179,7 +179,7 @@ $bolt-nav-list-link-bg-transition: $bolt-transition;
     &:before {
       animation:
         a-bolt-navbar-link-bg-hover
-        $bolt-nav-list-link-bg-transition-timing
+        $bolt-navlist-link-bg-transition-timing
         both;
     }
   }
