BK-66: Replace name anchors with element ids on product page

--- a/src/_patterns/04-pages/d8-product/d8-product.twig
+++ b/src/_patterns/04-pages/d8-product/d8-product.twig
@@ -95,12 +95,15 @@
   {% endblock band_content %}
 {% endembed %}
 
-<a name="section-1"></a>
-
 {% embed "@bolt/band.twig" with {
   size: "large",
   theme: "xlight",
-  fullBleed: true
+  fullBleed: true,
+  attributes: {
+    id: [
+      "section-1"
+    ]
+  }
 } %}
   {% block band_content %}
 
@@ -121,12 +124,15 @@
   {% endblock band_content %}
 {% endembed %}
 
-<a name="section-2"></a>
-
 {% embed "@bolt/band.twig" with {
   size: "large",
   theme: "dark",
-  fullBleed: true
+  fullBleed: true,
+  attributes: {
+    id: [
+      "section-2"
+    ]
+  }
 } %}
   {% block band_content %}
 
@@ -147,12 +153,15 @@
   {% endblock band_content %}
 {% endembed %}
 
-<a name="section-3"></a>
-
 {% embed "@bolt/band.twig" with {
   size: "large",
   theme: "light",
-  fullBleed: true
+  fullBleed: true,
+  attributes: {
+    id: [
+      "section-3"
+    ]
+  }
 } %}
   {% block band_content %}
 
@@ -173,12 +182,15 @@
   {% endblock band_content %}
 {% endembed %}
 
-<a name="section-4"></a>
-
 {% embed "@bolt/band.twig" with {
   size: "large",
   theme: "xdark",
-  fullBleed: true
+  fullBleed: true,
+  attributes: {
+    id: [
+      "section-4"
+    ]
+  }
 } %}
   {% block band_content %}
 
@@ -199,12 +211,15 @@
   {% endblock band_content %}
 {% endembed %}
 
-<a name="section-5"></a>
-
 {% embed "@bolt/band.twig" with {
   size: "large",
   theme: "xlight",
-  fullBleed: true
+  fullBleed: true,
+  attributes: {
+    id: [
+      "section-5"
+    ]
+  }
 } %}
   {% block band_content %}
 
@@ -225,12 +240,15 @@
   {% endblock band_content %}
 {% endembed %}
 
-<a name="section-6"></a>
-
 {% embed "@bolt/band.twig" with {
   size: "large",
   theme: "light",
-  fullBleed: true
+  fullBleed: true,
+  attributes: {
+    id: [
+    "section-6"
+    ]
+  }
 } %}
   {% block band_content %}
 
