--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -18,10 +18,6 @@
 // Navbar styles
 bolt-navbar {
   display: block;
-  position: sticky;
-  top: 0;
-  width: 100%;
-  z-index: 99999;
 }
 
 .c-bolt-navbar {
@@ -224,3 +220,18 @@ bolt-navlist {
   }
 }
 
+
+
+
+/* ------------------------------------ *\
+   Sticky
+\* ------------------------------------ */
+
+
+.o-bolt-sticky {
+  display: block;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 99999; // TODO: [Mai] We need z-index management.
+}
