--- a/src/_patterns/04-pages/d8-product/d8-product.twig
+++ b/src/_patterns/04-pages/d8-product/d8-product.twig
@@ -1,40 +1,43 @@
-<div style="position:sticky;width:100%;height:10em;text-align:center;color:white;background:black;">
-  SITE HEADER MEGA NAV
+<div style="padding:5rem 2rem;text-align:center;color:white;background:black;">
+  SITE HEADER MEGA NAV<br>
+  <em>static position</em>
 </div>
 
-{% include "@bolt/navbar.twig" with {
-  "theme": "dark",
-  "gradient": true,
-  "vspacing": "xsmall",
-  "title":
-  {
-    "tag": "h2",
-    "text": "Product",
-    "icon":
+<div class="o-bolt-sticky">
+  {% include "@bolt/navbar.twig" with {
+    "theme": "dark",
+    "gradient": true,
+    "vspacing": "xsmall",
+    "title":
     {
-      "name": "marketing-gray"
-    }
-  },
-  "links":
-  [
-    {
-      "text": "Features",
-      "url": "#section-1"
+      "tag": "h2",
+      "text": "1st Sticky Navbar",
+      "icon":
+      {
+        "name": "marketing-gray"
+      }
     },
-    {
-      "text": "Customer Success",
-      "url": "#section-2"
-    },
-    {
-      "text": "Go Further",
-      "url": "#section-3"
-    },
-    {
-      "text": "Industry Apps",
-      "url": "#section-4"
-    }
-  ]
-} only %}
+    "links":
+    [
+      {
+        "text": "Section 1ne",
+        "url": "#section-1"
+      },
+      {
+        "text": "Section 2",
+        "url": "#section-2"
+      },
+      {
+        "text": "Section Thr33",
+        "url": "#section-3"
+      },
+      {
+        "text": "Section 4",
+        "url": "#section-4"
+      }
+    ]
+  } only %}
+</div>
 
 {% embed "@bolt/band.twig" with {
   size: "large",
@@ -210,6 +213,42 @@
 
   {% endblock band_content %}
 {% endembed %}
+
+<div class="o-bolt-sticky">
+  {% include "@bolt/navbar.twig" with {
+    "theme": "light",
+    "gradient": false,
+    "vspacing": "xsmall",
+    "title":
+    {
+      "tag": "h2",
+      "text": "2nd Sticky Navbar",
+      "icon":
+      {
+        "name": "cloud"
+      }
+    },
+    "links":
+    [
+      {
+        "text": "Link",
+        "url": "#section-5"
+      },
+      {
+        "text": "Link",
+        "url": "#section-5"
+      },
+      {
+        "text": "Link",
+        "url": "#section-6"
+      },
+      {
+        "text": "Link",
+        "url": "#section-6"
+      }
+    ]
+  } only %}
+</div>
 
 {% embed "@bolt/band.twig" with {
   size: "large",
