chore: renaming sticky

--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -228,7 +228,7 @@ bolt-navlist {
 \* ------------------------------------ */
 
 
-.o-bolt-sticky {
+.c-bolt-sticky {
   display: block;
   position: sticky;
   top: 0;
