--- a/src/_patterns/04-pages/d8-product/d8-product.twig
+++ b/src/_patterns/04-pages/d8-product/d8-product.twig
@@ -3,7 +3,7 @@
   <em>static position</em>
 </div>
 
-<div class="o-bolt-sticky">
+<div class="c-bolt-sticky">
   {% include "@bolt/navbar.twig" with {
     "theme": "dark",
     "gradient": true,
@@ -214,7 +214,7 @@
   {% endblock band_content %}
 {% endembed %}
 
-<div class="o-bolt-sticky">
+<div class="c-bolt-sticky">
   {% include "@bolt/navbar.twig" with {
     "theme": "light",
     "gradient": false,
