Allow caller to provide a "weight" override to headline."

--- a/src/_patterns/02-components/bolt-headline/src/headline.twig
+++ b/src/_patterns/02-components/bolt-headline/src/headline.twig
@@ -19,5 +19,5 @@
   "xxxlarge"
 ] %}
 {% set size = size | default("xlarge") %}
-{% set weight = "bold" %}
+{% set weight = weight | default("bold") %}
 {% set tag = tag | default("h2") %}
