fix: custom element update

--- a/src/_patterns/02-components/bolt-sticky/src/sticky.scss
+++ b/src/_patterns/02-components/bolt-sticky/src/sticky.scss
@@ -3,6 +3,10 @@
 \* ------------------------------------ */
 
 
+bolt-sticky {
+  display: block;
+}
+
 .c-bolt-sticky {
   display: block;
   position: sticky;
