feat: split navbar JS logic into a custom element wrapper. update SkateJS to v5.0.0-beta.4. Adding web component JS shims to navbar + Drupal-ready JS build. Update Gulp build to account for the Icons component not being pre-compiled.

--- a/src/_patterns/02-components/bolt-navbar/src/navbar.scss
+++ b/src/_patterns/02-components/bolt-navbar/src/navbar.scss
@@ -1,14 +1,5 @@
-@import '@bolt/settings-global';
-@import '@bolt/settings-colors';
-@import '@bolt/settings-font-size';
-@import '@bolt/settings-font-weight';
-@import '@bolt/tools-spacing';
-@import '@bolt/tools-color-palette';
-@import '@bolt/tools-font-size';
-@import '@bolt/tools-font-weight';
-
-
-
+@import '@bolt/settings-all';
+@import '@bolt/tools-all';
 
 /* ------------------------------------ *\
    Navbar
